Minor cleanup of some JavaDoc and style formatting.
Signed-off-by: James R. Perkins <jperkins@redhat.com>